Initial refactoring - Accounts
* New folder structure
* Basic files and implementations for testing
* updated .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -135,3 +135,20 @@ dmypy.json
 
 # Cython debug symbols
 cython_debug/
+
+# pytest cache and test directories
+.pytest_cache/
+*.pyc
+*.pyo
+*.pyd
+__pycache__/
+
+# pytest coverage reports
+.coverage
+.coverage.*
+*.cover
+htmlcov/
+
+# pytest temp directories
+.tmp*
+
